--- a/css/styles.css
+++ b/css/styles.css
@@ -19,11 +19,31 @@ h6 {
   color: var(--title-color);
 }
 
+.btn {
+  text-transform: uppercase;
+  color: var(--title-color);
+  background-color: transparent;
+  cursor: pointer;
+}
+
+.btn:is(:hover, :focus) {
+  color: var(--light-text-color);
+  background-color: var(--accent-color);
+}
+
+.btn.dark {
+  color: var(--light-text-color);
+}
+
+.btn.dark:is(hover, focus) {
+  color: var(--light-text-color);
+}
+
 .link {
   text-decoration: none;
 }
 
-.link:hover {
+.link:is(:hover, :focus) {
   color: var(--accent-color);
 }
 
