--- a/css/styles.css
+++ b/css/styles.css
@@ -1,9 +1,10 @@
 :root {
   /* COLORS */
 
-  --title-color: #303030;
+  --primary-text-color: #303030;
   --text-color: #555555;
-  --transparent-text-color: #9da4bd;
+  --light-text-color: #9da4bd;
+  --transparent-text-color: rgba(157, 164, 189, 0.6);
   --light-color: #ffffff;
   --accent-color: #ff6c00;
 
@@ -28,17 +29,22 @@ h5,
 h6 {
   font-family: var(--heading-font);
   letter-spacing: 0.05em;
-  color: var(--title-color);
+  color: var(--primary-text-color);
 }
 
 p {
   letter-spacing: 0.02em;
 }
 
+/* ============= COMPONENTS ============= */
+
 .btn {
   font-family: inherit;
   text-transform: uppercase;
-  color: var(--title-color);
+  font-size: 12px;
+  line-height: 1.33;
+  letter-spacing: 0.09em;
+  font-weight: 600;
   background-color: transparent;
   cursor: pointer;
 }
@@ -48,20 +54,21 @@ p {
   background-color: var(--accent-color);
 }
 
-.btn.dark {
-  color: var(--light-color);
+.btn-theme-light {
+  color: var(--primary-text-color);
 }
 
-.btn.dark:is(hover, focus) {
+.btn-theme-dark {
   color: var(--light-color);
 }
 
 .link {
   text-decoration: none;
-  color: var(--title-color);
+  color: var(--primary-text-color);
 }
 
-.link:is(:hover, :focus-visible) {
+.link:is(:hover, :focus-visible),
+.el-link:is(:hover, :focus-visible) {
   color: var(--accent-color);
 }
 
@@ -69,30 +76,91 @@ p {
   list-style: none;
 }
 
-header .link {
-  color: var(--light-color);
-}
-
-.aside {
+.follow-link,
+.copyright {
   font-size: 11px;
+  line-height: 1.36;
   letter-spacing: 0.2em;
   font-weight: 600;
 }
 
 .overline {
+  font-size: 11px;
+  line-height: 1.36;
+  font-weight: 600;
+  text-transform: uppercase;
   letter-spacing: 0;
+}
+
+.overline-theme-light {
+  color: var(--primary-text-color);
+}
+
+.overline-theme-dark {
+  color: var(--transparent-text-color);
+}
+
+.subtitle {
+  font-size: 18px;
+  line-height: 1.67;
+  letter-spacing: 0.02em;
+}
+
+.subtitle-theme-light {
+  color: var(--text-color);
+}
+
+.subtitle-theme-dark {
+  color: var(--light-text-color);
+}
+
+.title-theme-dark {
+  color: var(--light-color);
 }
 
 .text {
   font-size: 14px;
   line-height: 1.86;
-  letter-spacing: 0.02em;
 }
+
+/* ============= HEADER ============= */
+
+header .link {
+  color: var(--light-color);
+}
+
+.menu {
+  background-color: var(--primary-text-color);
+}
+
+.menu-link {
+  font-size: 12px;
+  letter-spacing: 0.1em;
+  font-weight: 600;
+  line-height: 1.33;
+}
+
+/* ============= HERO ============= */
+
+.hero-title {
+  font-size: 72px;
+  line-height: 1.18;
+  letter-spacing: 0.05em;
+}
+
+/* ============= ONLINE BOOKING ============= */
 
 address {
   font-style: normal;
 }
 
-address .link {
-  color: var(--transparent-text-color);
+address .link,
+.el-link {
+  color: var(--light-text-color);
+}
+
+/* ============= FOOTER ============= */
+
+.copyright {
+  color: var(--light-text-color);
 }
