--- a/css/styles.css
+++ b/css/styles.css
@@ -17,7 +17,6 @@
 body {
   font-family: var(--main-font);
   color: var(--text-color);
-
   background-color: var(--light-color);
 }
 
@@ -55,6 +54,11 @@ p {
 
 .btn {
   font-family: inherit;
+  min-width: 160px;
+  height: 40px;
+  padding: 12px 40px;
+  border: 1px solid var(--accent-color);
+  border-radius: 25px;
   text-transform: uppercase;
   font-size: 12px;
   line-height: 1.33;
@@ -65,6 +69,7 @@ p {
 }
 
 .btn:is(:hover, :focus) {
+  border-color: transparent;
   color: var(--light-color);
   background-color: var(--accent-color);
 }
