--- a/css/styles.css
+++ b/css/styles.css
@@ -29,10 +29,20 @@ h6 {
   font-family: var(--heading-font);
   letter-spacing: 0.05em;
   color: var(--primary-text-color);
+  margin-top: 0;
+  margin-bottom: 0;
 }
 
 p {
   letter-spacing: 0.02em;
+  margin-top: 0;
+  margin-bottom: 0;
+}
+
+ul,
+ol {
+  margin: 0px;
+  padding-left: 0;
 }
 
 /* ============= UTILITIES ============= */
