--- a/css/styles.css
+++ b/css/styles.css
@@ -255,6 +255,16 @@ nav {
 
 /* ============= ABOUT ============= */
 
+.about-wrapper {
+  display: flex;
+  gap: 30px;
+}
+
+.about-image-wrapper {
+  display: flex;
+  gap: 30px;
+}
+
 .section-title {
   margin-bottom: 20px;
 }
@@ -281,6 +291,11 @@ nav {
   background-color: #555555;
 }
 
+.services-list-wrapper {
+  display: flex;
+  gap: 30px;
+}
+
 .services .section-title,
 .services-list-wrapper {
   margin-bottom: 44px;
@@ -288,6 +303,11 @@ nav {
 
 .services-list {
   padding: 30px 20px;
+}
+
+.services-item {
+  display: flex;
+  justify-content: space-between;
 }
 
 .services-item:not(:last-child) {
@@ -301,6 +321,25 @@ nav {
 }
 
 /* ============= ADVANTAGES ============= */
+
+.advantages-wrapper {
+  display: flex;
+  gap: 130px;
+}
+
+.advantages-number-wrapper {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 30px;
+  margin-left: 100px;
+}
+
+.advantages-number-wrapper .list-item:nth-child(2) {
+  margin-top: 35px;
+}
+.advantages-number-wrapper .list-item:nth-child(3) {
+  margin-bottom: 35px;
+}
 
 .advantages-title {
   display: block;
@@ -321,6 +360,11 @@ nav {
 }
 
 /* ============= OUR BARBERS ============= */
+
+.barbers-wrapper {
+  display: flex;
+  gap: 30px;
+}
 
 .barber-master-wrapper {
   padding: 30px 82px 0;
@@ -349,11 +393,24 @@ nav {
 
 /* ============= WORKS ============= */
 
+.works-wrapper {
+  display: flex;
+  gap: 30px;
+}
+
 .works .overline {
   margin-bottom: 44px;
 }
 
 /* ============= ONLINE BOOKING ============= */
+
+.section-wrapper {
+  display: flex;
+}
+
+.section-wrapper section {
+  min-width: 50%;
+}
 
 .booking .section-title {
   margin-bottom: 44px;
@@ -394,6 +451,11 @@ address .link,
 
 footer {
   padding: 56px 0;
+}
+
+.footer-wrapper {
+  display: flex;
+  justify-content: space-between;
 }
 
 .copyright {
