--- a/css/styles.css
+++ b/css/styles.css
@@ -245,6 +245,10 @@ nav {
   background-color: #555555;
 }
 
+.hero-wrapper {
+  max-width: 444px;
+}
+
 .hero-title {
   margin-bottom: 20px;
 
@@ -265,6 +269,9 @@ nav {
   gap: 30px;
 }
 
+.about-info-wrapper {
+  max-width: 470px;
+}
 .section-title {
   margin-bottom: 20px;
 }
@@ -303,6 +310,7 @@ nav {
 
 .services-list {
   padding: 30px 20px;
+  width: calc(100% - 30px / 2);
 }
 
 .services-item {
@@ -332,6 +340,7 @@ nav {
   flex-wrap: wrap;
   gap: 30px;
   margin-left: 100px;
+  width: 370px;
 }
 
 .advantages-number-wrapper .list-item:nth-child(2) {
@@ -339,6 +348,10 @@ nav {
 }
 .advantages-number-wrapper .list-item:nth-child(3) {
   margin-bottom: 35px;
+}
+
+.advantages-info-wrapper {
+  width: 500px;
 }
 
 .advantages-title {
@@ -364,6 +377,10 @@ nav {
 .barbers-wrapper {
   display: flex;
   gap: 30px;
+}
+
+.barbers-wrapper .list-item {
+  width: calc(100% - 60px / 3);
 }
 
 .barber-master-wrapper {
@@ -398,35 +415,41 @@ nav {
   gap: 30px;
 }
 
+..works-wrapper .list-item {
+  width: calc(100% -90px / 4);
+}
+
 .works .overline {
   margin-bottom: 44px;
 }
 
-/* ============= ONLINE BOOKING ============= */
+/* ============= BOOKING-CONTACTS ============= */
 
-.section-wrapper {
-  display: flex;
+.booking-contacts {
+  padding-top: 130px;
+
+  background-color: #555555;
 }
 
-.section-wrapper section {
-  min-width: 50%;
+.booking-contacts .wrapper {
+  display: flex;
+  gap: 130px;
+}
+
+.booking {
+  width: 570px;
 }
 
 .booking .section-title {
   margin-bottom: 44px;
 }
 
-/* ============= CONTACTS ============= */
+.contacts {
+  width: 270px;
+}
 
 .contacts .section-title {
   margin-bottom: 40px;
-}
-
-.booking,
-.contacts {
-  padding-top: 130px;
-
-  background-color: #555555;
 }
 
 .address-text,
