--- a/css/styles.css
+++ b/css/styles.css
@@ -83,7 +83,7 @@ address {
   margin: 0 auto;
 }
 
-section {
+.section {
   padding: 120px 0;
 }
 
@@ -239,13 +239,21 @@ nav {
 /* ============= HERO ============= */
 
 .hero {
-  padding-left: 100px;
-  padding-bottom: 208px;
-
   background-color: #555555;
 }
 
 .hero-wrapper {
+  display: flex;
+}
+
+.hero-content-wrapper {
+  width: 1070px;
+  padding-left: 100px;
+  padding-top: 272px;
+  padding-bottom: 208px;
+}
+
+.hero-content {
   max-width: 444px;
 }
 
