--- a/css/styles.css
+++ b/css/styles.css
@@ -9,6 +9,8 @@
   --medium-color: #f7f7f7;
   --accent-color: #ff6c00;
   --bg-color: #191c26;
+  --gradient-color: rgba(25, 28, 38, 0.2);
+  --gradient-dark-color: rgba(25, 28, 38, 0.9);
 
   /* TYPEFACES */
 
@@ -290,12 +292,16 @@ nav {
 
 .hero-content-wrapper {
   flex-grow: 1;
-  background-color: var(--bg-color);
   padding-top: 272px;
   padding-right: 100px;
   padding-bottom: 208px;
   padding-left: 100px;
-  background-image: url(../images/background/hero-slider-1x.jpg);
+  background-color: var(--bg-color);
+  background-image: linear-gradient(
+      var(--gradient-color),
+      var(--gradient-color)
+    ),
+    url(../images/background/hero-slider-1x.jpg);
 }
 
 .hero-title {
@@ -359,7 +365,10 @@ nav {
 /* ============= SERVICES AND PRICES ============= */
 
 .services {
-  background-image: url(../images/background/services-slider-1x.jpg);
+  background-image: linear-gradient(
+      var(--gradient-dark-color, var(--gradient-dark-color))
+    ),
+    url(../images/background/services-slider-1x.jpg);
 }
 
 .services-list-wrapper {
@@ -375,6 +384,7 @@ nav {
 .services-list {
   padding: 30px 20px;
   flex-basis: calc(100% - 30px / 2);
+  background-image: linear-gradient(#171a24, var(--gradient-color));
 }
 
 .services-item {
@@ -447,6 +457,10 @@ nav {
 
 /* ============= OUR BARBERS ============= */
 
+.barbers {
+  background-color: var(--medium-color);
+}
+
 .barbers-wrapper {
   display: flex;
   gap: 30px;
@@ -506,7 +520,13 @@ nav {
 
 .booking-contacts {
   padding-top: 130px;
-  background-image: url(../images/background/contacts-slider-1x.jpg);
+  background-color: var(--bg-color);
+  background-image: linear-gradient(
+      to right,
+      var(--bg-color) 0% 50%,
+      var(--gradient-dark-color) 50% 100%
+    ),
+    url(../images/background/contacts-slider-1x.jpg);
   background-repeat: no-repeat;
   background-position: right bottom;
 }
@@ -515,7 +535,8 @@ nav {
   display: flex;
   gap: 130px;
 }
-c .booking-contacts .link::before,
+
+.booking-contacts .link::before,
 .el-link::before {
   content: '';
   display: inline-block;
